# azure-ai-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  GITHUB_DESCRIPTION.md  LICENSE  README.md  RELEASE_NOTES.md  config.example.toml
.github/workflows/: ci.yml  release.yml
docs/: _config.yml  documentation.html  index.html
src/: chat.rs  client.rs  config.rs  i18n.rs  input.rs  main.rs  tools.rs  ui.rs
